# grass-music-player

./: .eslintrc.js  .eslintrc.json  .gitignore  README.md  babel.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
src-tauri/: .tauriignore  Cargo.toml  database.sqlite  tauri.conf.json
src-tauri/bindings/: Artist.ts  ArtistCredit.ts  ArtistCreditPart.ts  ArtistOverview.ts  CoverArtPosition.ts  DbArtist.ts  DbArtistCredit.ts  DbArtistCreditPart.ts  DbRelease.ts  DbTrack.ts  LibraryArtist.ts  LibraryArtistsItem.ts  LibraryRelease.ts  LibraryReleaseTrack.ts  LibraryReleasesItem.ts  PlaybackState.ts  PlayerState.ts  PlayerTrack.ts  Preferences.ts  Release.ts  ReleaseOverview.ts  ReleaseTrack.ts  ScanState.ts  ScanStateKind.ts  ScanStatePhase.ts  SearchResult.ts  Settings.ts  Track.ts
src-tauri/grass-player/: Cargo.toml  build.rs
src-tauri/grass-player/bass-sys/: Cargo.toml  build.rs
src-tauri/grass-player/bassmix-sys/: Cargo.toml  build.rs
src-tauri/grass-player/sample-files/: COPYRIGHT.md
src-tauri/grass-player/src/: lib.rs  mixer.rs  output_device.rs  stream.rs
src-tauri/migrations/artist/: down.sql  up.sql
src-tauri/migrations/artist_credit/: down.sql  up.sql
src-tauri/sql/: artist_credit_part.sql  release.sql  track.sql
src-tauri/src/: database.rs  global.rs  library_manager.rs  main.rs  music_brainz_manager.rs  parser.rs  player_manager.rs  player_utils.rs  preferences_manager.rs  scanner.rs  tag_reader.rs
(+301 files in other folders)
