[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
souvlaki= "0.6.0"
anyhow = "1.0"
serde_json = "1.0"
window-shadows = "0.2.1"
grass-audio-rs = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["api-all"] }
rusqlite = { version = "0.29", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
lofty = {git ="https://github.com/Serial-ATA/lofty-rs.git", branch = "main"}
image = { version = "0.24", features = ["webp-encoder"] }
glob = "0.3.1"
ts-rs= "6.2"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
